Refine ash shelf tooltip closing on non-mash ChromeOS.

Fixes a regression from: https://codereview.chromium.org/1816753002
Also reverse expected behavior for touching tooltips.
(closes on stable, tests expected them to stay open...)

Inline bubble function definitions.
Call WillDeleteShelf earlier to fix a test crash...
TODO: Encapsulate more ShelfLayoutManager code.

BUG=595853
TEST=ChromeOS tooltips stay open on hover; close for external touches.
R=sky@chromium.org

Review URL: https://codereview.chromium.org/1828133004

Cr-Commit-Position: refs/heads/master@{#383404}

Former-commit-id: 1a0d283fa81e19b47fb85523f28c4a03f7dc1d24