ash/shelf/shelf_tooltip_manager.h
@@ -12,6 +12,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "base/memory/weak_ptr.h"
 #include "base/strings/string16.h"
 #include "base/timer/timer.h"
+#include "ui/aura/window_observer.h"
 #include "ui/events/event_handler.h"
 
 namespace views {
@@ -30,6 +31,7 @@ class ShelfViewTest;
 
 // ShelfTooltipManager manages the tooltip bubble that appears for shelf items.
 class ASH_EXPORT ShelfTooltipManager : public ui::EventHandler,
+                                       public aura::WindowObserver,
                                        public ShelfLayoutManagerObserver {
  public:
   explicit ShelfTooltipManager(ShelfView* shelf_view);
@@ -58,6 +60,9 @@ class ASH_EXPORT ShelfTooltipManager : public ui::EventHandler,
   // ui::EventHandler overrides:
   void OnEvent(ui::Event* event) override;
 
+  // aura::WindowObserver overrides:
+  void OnWindowDestroying(aura::Window* window) override;
+
   // ShelfLayoutManagerObserver overrides:
   void WillDeleteShelf() override;
   void WillChangeVisibilityState(ShelfVisibilityState new_state) override;
@@ -72,6 +77,7 @@ class ASH_EXPORT ShelfTooltipManager : public ui::EventHandler,
   base::OneShotTimer timer_;
 
   ShelfView* shelf_view_;
+  aura::Window* root_window_;
   ShelfLayoutManager* shelf_layout_manager_;
   views::BubbleDelegateView* bubble_;
 
